force-app/main/default/objects/Contact/fields/External_Phone_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Phone_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Phone ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>