force-app/main/default/objects/Contact/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>